# metalk8s

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylint-dict  .pylintrc  .readthedocs.yaml  .salt-lint  BUILDING.md  BUMPING.md  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.rst  Dockerfile  Makefile  README.md  VERSION  Vagrantfile  ansible.cfg  ansible.cfg.example  bootstrap-node.sh  build.sh  container_images.mk  dodo.py  doit.cfg  doit.sh  fix-chart.py  fixup-labels.py  generate.sh  lint-requirements.txt  local_client.yml  metal-k8s.yml  metalk8s.spec  packages.mk  requirements.in  requirements.txt  scale-metal-k8s.yml  static-container-registry.py  third-party.yaml  tox.ini  (+1 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  changed-files.yaml  dependabot.yml  labeler.yml
artwork/: generate.sh
buildchain/: __init__.py  build.py  config.py  constants.py  coreutils.py  dodo.py  image.py  iso.py  lint.py  packaging.py  platform-requirements.txt  requirements-Darwin.txt  (+9 more)
tools/lib-alert-tree/: Dockerfile  README.rst  pyproject.toml  requirements.txt
tools/lib-alert-tree/lib_alert_tree/: __init__.py  cli.py  kubernetes.py  models.py  prometheus.py
tools/lib-alert-tree/metalk8s/: __init__.py  __main__.py  network.py  nodes.py  volumes.py
tools/lib-alert-tree/metalk8s/platform/: __init__.py  access.py  core.py  observability.py
tools/lib-alert-tree/tests/: test_cli.py  test_kubernetes.py  test_lib_alert_tree.py  test_models.py  test_prometheus.py
tools/metalctl/: README.md  metalctl.pex  pyproject.toml  reqs.txt
tools/metalctl/metalctl/: __main__.py  checkpoint.py  checks.py  errors.py  log.py  main.py  salt.py  utils.py
tools/metalctl/metalctl/scripts/: __init__.py  backup.py  test.py  upgrade.py
(+2921 files in other folders)
