[tool.poetry]
name = "lib-alert-tree"
version = "0.1.0"
description = ""
authors = ["Scality MetalK8s <squad-metalk8s@scality.com>"]

[tool.poetry.dependencies]
# Mandatory dependencies
python = "^3.6"
treelib = "^1.6"
PyYAML = "^5.4"

# Optional dependencies
Click = { version = "^8.0", optional = true }

[tool.poetry.extras]
cli = ["Click"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"

[tool.pylint.design]
max-args = 9

[tool.pylint.spelling]
spelling-private-dict-file = "../../.pylint-dict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
